# berlin-hackathon

./: .gitignore  README.md  agent.py  audio.py  audio_2.py  audio_3.py  okcomputer.py  pyproject.toml  telegram.py  telegram_bot.py  test_genai.py  test_genai_2.py  test_genai_3.py  test_live_audio.py  test_live_audio_2.py  test_live_audio_3.py  test_playwright.py  test_pytgcalls.py
