[project]
name = "berlin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.122.0",
    "google-genai>=1.52.0",
    "pillow>=12.0.0",
    "py-tgcalls>=2.2.8",
    "pyautogui>=0.9.54",
    "telethon>=1.42.0",
]
